Fix cookie notification text - button alignment

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -2571,9 +2571,14 @@ body.checkout .section-heading .gw-icon {
   box-shadow: 0 8px 16px 0 rgba(34,50,84,.06);
   border-radius: 8px;
   text-align: center;
+
+  .cookie-notification {
+    display: flex;
+    align-items: center;
+  }
+
   p {
     margin: 0;
-    float: left;
     padding: 15px 0 10px;
     font-size: 18px;
     line-height: 22px;
